--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -74,16 +74,16 @@
     <Compile Include="Assets\Scripts\TaskQuestion.cs" />
     <Compile Include="Assets\Scripts\TouchEvents.cs" />
     <Reference Include="UnityEditor.StandardEvents">
-      <HintPath>C:/Users/ebe215/Dropbox/Work-from-home/7. From Lenovo/Documents/SparkHaptics/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
+      <HintPath>C:/Users/ebe215/Documents/GitHub/SparkHaptics/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>C:/Users/ebe215/Dropbox/Work-from-home/7. From Lenovo/Documents/SparkHaptics/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>C:/Users/ebe215/Documents/GitHub/SparkHaptics/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.PackageManagerUI.Editor">
-      <HintPath>C:/Users/ebe215/Dropbox/Work-from-home/7. From Lenovo/Documents/SparkHaptics/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
+      <HintPath>C:/Users/ebe215/Documents/GitHub/SparkHaptics/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>C:/Users/ebe215/Dropbox/Work-from-home/7. From Lenovo/Documents/SparkHaptics/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>C:/Users/ebe215/Documents/GitHub/SparkHaptics/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
@@ -281,7 +281,7 @@
       <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnitySpatialTracking/RuntimeEditor/UnityEngine.SpatialTracking.dll</HintPath>
     </Reference>
     <Reference Include="Tanvas.TouchUnity">
-      <HintPath>C:/Users/ebe215/Dropbox/Work-from-home/7. From Lenovo/Documents/SparkHaptics/Assets/Plugins/Tanvas.TouchUnity.dll</HintPath>
+      <HintPath>C:/Users/ebe215/Documents/GitHub/SparkHaptics/Assets/Plugins/Tanvas.TouchUnity.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.Analytics">
       <HintPath>C:/Users/ebe215/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.analytics@2.0.16/UnityEngine.Analytics.dll</HintPath>
